--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "scripts": {
         "test": "phpunit --colors=always",
-        "test-docs": "phpunit tests/documentation --colors=always"
+        "test-docs": "phpunit tests/documentation --colors=always",
+        "test-calc": "phpunit tests/calculator --colors=always"
     }
 }
