--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require": {
         "php": "^7.4|^8.0",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
