Lesson #3. Error and Exception Testing

--- a/app/composer.json
+++ b/app/composer.json
@@ -11,7 +11,8 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "symfony/var-dumper": "^6.2"
     },
     "autoload": {
         "psr-4": {
